<resources>

    <string name="app_name">XtremIO REST API Android App</string>
    <string name="xms_label">XMS IP Address</string>
    <string name="xms_value">[xms ip address]</string>
    <string name="username_label">Username</string>
    <string name="username_value">[username]</string>
    <string name="password_label">Password</string>
    <string name="password_value">[password]</string>
    <string name="action_refresh">Refresh</string>

</resources>
