<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity$PlaceholderFragment">

    //Lables to the Left
    <TextView
        android:id="@+id/xms_label"
        android:text="@string/xms_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/username_label"
        android:text="@string/username_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/id_label"
        android:layout_alignParentLeft="true" />

    <TextView
        android:id="@+id/password_label"
        android:text="@string/password_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/id_label"
        android:layout_alignParentLeft="true" />

    //Values to the right
    <TextView
        android:id="@+id/xms_value"
        android:text="@string/xms_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/xms_label"
        android:layout_marginLeft="50dp" />

    <TextView
        android:id="@+id/username_value"
        android:text="@string/username_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/username_label"
        android:layout_alignLeft="@+id/xms_value" />

    <TextView
        android:id="@+id/password_value"
        android:text="@string/password_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/password_label"
        android:layout_alignLeft="@+id/xms_value" />

</RelativeLayout>